# ticket-sales

./: Cargo.toml  README.org  build.sh  deploy.sh  mainnet.org  purcharse.org  test.org  ticket.org  transfer.org
neardev/: dev-account  dev-account.env
src/: event.rs  lib.rs
