[package]
name = "contract-publicsale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.1.1"
serde_json = "1.0.96"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
overflow-checks = true
codegen-units = 1
opt-level = "z"
panic = "abort"
debug = false
lto = true

[workspace]
members = []
